--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>filme de romance</header>
+    <header>filmes de romance</header>
 
     <section class="chamada">
         <div class="chamada-texto">
