--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraFlix S</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>filmes de romance</header>
 
@@ -14,11 +16,12 @@
             <h1>a cinco passos de voce</h1>
             <p>vou te amar mesmo distante</p>
         </div>
-   
-    <div>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/RyqwBSI67YI?si=R4VoKgQZ5QiKV-lx" title="YouTube video player" frameborder="0"
-             allow="accelerometer; autoplay;
+
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RyqwBSI67YI?si=R4VoKgQZ5QiKV-lx"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
              clipboard-write; encrypted-media; gyroscope;
-              picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
-      </div>
+              picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </section>
+
